--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "mysql2": "^3.12.0",
     "next": "^14.1.0",
     "next-auth": "^4.24.11",
     "react": "^18.2.0",
